# Smart-cache-with-eviction-and-distributed-storage

./: CMakeLists.txt  README.md  main.cpp
src/: CacheMultiIndex.hpp  base.hpp  base_cache.hpp  cache.hpp  cache_client.hpp  cache_eviction_policy.hpp  cache_gui.hpp  cache_item.hpp  cache_server.hpp  cache_server_api.hpp  distributed_cache.hpp  fifo_eviction_policy.hpp  hash_util.hpp  lfu_eviction_policy.hpp  local_cache.cpp  lru_eviction_policy.hpp  remote_cache.cpp  replication.hpp
wrappers/: lcache.py  python_wrapper.py
